--- a/views/header.html
+++ b/views/header.html
@@ -76,6 +76,7 @@
 				<span class="dropdown-toggle" uib-dropdown-toggle>Camera DVR &nbsp;<fa name="angle-down"></fa></span>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
 					<li><a ui-sref="app.admin.camera.camera-dvr">Live and Recorded Feeds</a></li>
+					<li><a ui-sref="app.admin.camera.motion-detector">Motion Detector</a></li>
 					<!-- <li><a ui-sref="app.admin.setup.camera-directory">Camera Directory</a></li>
 					<li><a ui-sref="app.admin.setup.dvr-directory">DVR Directory</a></li>
 					<li><a ui-sref="app.admin.setup.dvrcamera-directory">DVR Camera Directory</a></li> -->
