commented two blog and css added

--- a/css/style.css
+++ b/css/style.css
@@ -1638,6 +1638,7 @@ ul.callbacks_tabs.callbacks2_tabs {
     padding: 2em;
     margin: 0 auto;
     background: #1bb4b9;
+	    margin-left: 104px;
 }
 .single-middle {
   margin-top: 3em;
