--- a/css/style.css
+++ b/css/style.css
@@ -1617,13 +1617,13 @@ ul.callbacks_tabs.callbacks2_tabs {
 	background: url(../images/s7.png) no-repeat 0px 0px;
 }
 .banner-text2{
-	background: url(../images/s2.jpg) no-repeat 0px 0px;
+	background: url(../images/s8.jpg) no-repeat 0px 0px;
 }
 .banner-text3{
 	background: url(../images/s6.jpg) no-repeat 0px 0px;
 }
 .banner-text4{
-	background: url(../images/s5.jpg) no-repeat 0px 0px;
+	background: url(../images/s10.png) no-repeat 0px 0px;
 }
 .banner-text1,.banner-text2,.banner-text3,.banner-text4{
 	 background-size: cover;
