remove masking from mobile

--- a/app/teacher/views/students.html
+++ b/app/teacher/views/students.html
@@ -33,7 +33,7 @@
                     <input type="text" class="form-control" ng-model="student.dob" data-inputmask="'mask': '99/99/9999'">
 
                     <label for="fullname">Mobile Number* : </label>
-                    <input type="text" class="form-control" ng-model="student.mobile" data-inputmask="'mask' : '(999) 999-9999'">
+                    <input type="text" class="form-control" ng-model="student.mobile" >
 
                     <label for="email">Email * :</label>
                     <input type="email" id="email" class="form-control" name="email" ng-model="student.email" data-parsley-trigger="change" required
@@ -160,7 +160,7 @@
                             <input type="text" class="form-control" ng-model="student.dob" data-inputmask="'mask': '99/99/9999'">
 
                             <label for="fullname">Mobile Number* : </label>
-                            <input type="text" class="form-control" ng-model="student.mobile" data-inputmask="'mask' : '(999) 999-9999'">
+                            <input type="text" class="form-control" ng-model="student.mobile" >
 
                             <label for="email">Email * :</label>
                             <input type="email" id="email" class="form-control" name="email" ng-model="student.email" data-parsley-trigger="change" required
